// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/25/2010
	r283 [Rytech]
	*Small fix in the skill_db.

03/24/2010
	r282 [Rytech]
	*Added baby mount support to the job system.
	-The mounts wont be accessable until their fully coded in the needed area's in the source.

03/24/2010
	r281 [pakpil]
	* Fixed a mistake in CR_REFLECSHIELD and LG_REFLECTDAMAGE. Follow up r280.

03/23/2010
	r280 [pakpil]
	* Added LG_REFLECTDAMAGE skill.
	- Updated CR_REFLECTSHIELD that should fail if you are under LG_REFLECTDAMAGE and viceversa.
	* Minor fix in LG_BANISHINGPOINT that should take the weapon element.

	r279 [Rytech]
	*Changed some settings back to classic mechanic's and eAthena defults to keep true to the project goals.
	-Things like max stats for 3rd jobs will by 99 for regular and 80 for babys. You can raise this if you want.
	-Changed to setting for renewal cast times to no to keep the classic casting system working.
	-Changed MAX_CHAR in mmo.h to 9, which is eA's defult, as well as the defult in diff patches.
	-MAX_LEVEL will be kept at a 150 int he source, however itl stay limited to 99 in the exp.txt
	-unless you switch to using the exp2.txt table and set your own limits from there.

03/22/2010
	r277 [Jobbie]
	* Minor fix on my last commit. Follow up r276
	- Sorry for being rusty

	r276 [Jobbie]
	* Adjusted the behavior of Fearbreeze skill.
	* Fixed a mistake in checking wind element for both hands when using NC_AXETORNADO.

	r275 [pakpil]
	* Added missing changes in r274.

	r274 [pakpil]
	* Fixed GC_CREATENEWPOISON skill.
	- All poisons require and consume 1 Medicine Bowl and 1 Poison Creation Kit.
	- The ammount of bottles obtained depends on GC_RESEARCHNEWPOISON skill level.

	r273 [pakpil]
	* Fixed GC_WEAPONCRUSH behavior.
	* Fixed minor typo in pc.h.

03/21/2010
	r272 [Rytech]
	*Server now ignores the rune knight ID's that between the MECHANIC_T2 and BABY_RUNE jobs.