@@ -2027,12 +2027,15 @@ static struct Damage battle_calc_weapon_attack(struct block_list *src,struct blo
 					skillratio = 50 + 50 * skill_lv;
 					break;
 				case WM_GREAT_ECHO:
-					skillratio = 900 + 100 * skill_lv;
+					skillratio += 900 + 100 * skill_lv;
 					if( sd )	// Still need official value [pakpil]
 					{
 						short lv = (short)skill_lv;
 						skillratio += 20 * skill_check_pc_partner(sd,skill_num,&lv,skill_get_splash(skill_num,skill_lv),0);
 					}
+					break;
+				case LG_CANNONSPEAR:// Stimated formula. Still need confirm it.
+					skillratio += -100 + (50 * skill_lv) * ( sstatus->str / 50 ) * (status_get_lv(src) / 100);
 					break;
 				case GN_CART_TORNADO:
 					skillratio += 50 * skill_lv;
@@ -3666,7 +3669,6 @@ enum damage_lv battle_weapon_attack(struct block_list* src, struct block_list* t
 			}
 			if( tsc && tsc->data[SC_REFLECTDAMAGE] )
 			{
-				damage -= rdamage;
 				map_foreachinrange(battle_damage_area,target,skill_get_splash(LG_REFLECTDAMAGE,1),BL_CHAR,tick,target,wd.amotion,wd.dmotion,rdamage,tstatus->race,0);
 			}
 			else
