@@ -5147,7 +5147,7 @@ static void pc_calcexp(struct map_session_data *sd, unsigned int *base_exp, unsi
  *------------------------------------------*/
 int pc_gainexp(struct map_session_data *sd, struct block_list *src, unsigned int base_exp,unsigned int job_exp, bool quest)
 {
-#if PACKETVER < 20091027
+#if PACKETVER < 20091110
 	char output[256];
 #endif
 	float nextbp=0, nextjp=0;
@@ -5198,7 +5198,7 @@ int pc_gainexp(struct map_session_data *sd, struct block_list *src, unsigned int
 		else
 			sd->status.base_exp += base_exp;
 		pc_checkbaselevelup(sd);
-#if PACKETVER >= 20091027
+#if PACKETVER >= 20091110
 		clif_displayexp(sd,base_exp,1,true,quest);
 #endif
 		clif_updatestatus(sd,SP_BASEEXP);
@@ -5211,13 +5211,13 @@ int pc_gainexp(struct map_session_data *sd, struct block_list *src, unsigned int
 		else
 			sd->status.job_exp += job_exp;
 		pc_checkjoblevelup(sd);
-#if PACKETVER >= 20091027
+#if PACKETVER >= 20091110
 		clif_displayexp(sd,job_exp,2,true,quest);
 #endif
 		clif_updatestatus(sd,SP_JOBEXP);
 	}
 
-#if PACKETVER < 20091027
+#if PACKETVER < 20091110
 	if(sd->state.showexp){
 		sprintf(output,
 			"Experience Gained Base:%u (%.2f%%) Job:%u (%.2f%%)",base_exp,nextbp*(float)100,job_exp,nextjp*(float)100);
@@ -6104,7 +6104,7 @@ int pc_dead(struct map_session_data *sd,struct block_list *src)
 			  	if (battle_config.pk_mode && src && src->type==BL_PC)
 					base_penalty*=2;
 				exp = min(sd->status.base_exp, base_penalty);
-#if PACKETVER >= 20091027
+#if PACKETVER >= 20091110
 				clif_displayexp(sd, exp, 1, false, 0);
 #endif
 				sd->status.base_exp -= exp;
@@ -6127,7 +6127,7 @@ int pc_dead(struct map_session_data *sd,struct block_list *src)
 			  	if (battle_config.pk_mode && src && src->type==BL_PC)
 					base_penalty*=2;
 					exp = min(sd->status.job_exp, base_penalty);
-#if PACKETVER >= 20091027
+#if PACKETVER >= 20091110
 				clif_displayexp(sd, exp, 2, false, 0);
 #endif
 				sd->status.job_exp -= exp;
