@@ -1855,15 +1855,9 @@ int skill_attack (int attack_type, struct block_list* src, struct block_list *ds
 	if( (skillid == AL_INCAGI || skillid == AL_BLESSING || skillid == CASH_BLESSING || skillid == CASH_INCAGI) && tsd->sc.data[SC_CHANGEUNDEAD] )
 		damage = 1;
 
-	if( damage > 0 && dmg.flag&BF_WEAPON && src != bl && ( src == dsrc || ( dsrc->type == BL_SKILL && ( skillid == SG_SUN_WARM || skillid == SG_MOON_WARM || skillid == SG_STAR_WARM ) ) )
-		&& skillid != WS_CARTTERMINATION )
+	if( damage > 0 && (dmg.flag&BF_WEAPON && src != bl && ( src == dsrc || ( dsrc->type == BL_SKILL && ( skillid == SG_SUN_WARM || skillid == SG_MOON_WARM || skillid == SG_STAR_WARM ) ) )
+		&& skillid != WS_CARTTERMINATION) || (sc && sc->data[SC_REFLECTDAMAGE]) )
 		rdamage = battle_calc_return_damage(bl, damage, dmg.flag);	
-
-	if( damage > 0 && sc && sc->data[SC_REFLECTDAMAGE] )
-	{
-		rdamage = battle_calc_return_damage(bl, damage, dmg.flag);
-		damage -= rdamage;
-	}
 
 	//Skill hit type
 	type=(skillid==0)?5:skill_get_hit(skillid);
@@ -2963,6 +2957,7 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 	case NC_POWERSWING:
 	case SC_TRIANGLESHOT:
 	case SC_FEINTBOMB:
+	case LG_CANNONSPEAR:
 	case LG_BANISHINGPOINT:
 	case LG_RAGEBURST:
 	case WM_METALICSOUND:
@@ -7249,6 +7244,45 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 		}
 		else
 			clif_skill_fail(sd,skillid,0,0,0);
+		break;
+	
+	case LG_CANNONSPEAR:
+		{
+			int length = skill_get_maxcount(skillid,skilllv);
+			clif_skill_damage(src,bl,tick, status_get_amotion(src), 0, -30000, 1, skillid, skilllv, 6);
+			// North ( dir 0 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x,src->y+length,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// North-west ( dir 1 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x-length,src->y+length,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// West ( dir 2 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x-length,src->y,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// South-west ( dir 3 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x-length,src->y-length,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// South ( dir 4 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x,src->y-length,
+				skill_get_splash(skillid, skilllv),skill_get_maxcount(skillid,skilllv), splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// South-east ( dir 5 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x+length,src->y-length,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// East ( dir 6 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x+length,src->y,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+			// North-east ( dir 7 )
+			map_foreachinpath(skill_attack_area,src->m,src->x,src->y,src->x+length,src->y+length,
+				skill_get_splash(skillid, skilllv),length, splash_target(src),
+				skill_get_type(skillid),src,src,skillid,skilllv,tick,flag,BCT_ENEMY);
+		}
 		break;
 
 	case LG_REFLECTDAMAGE:
